# TimberbornCalculator

./: .gitignore  AGENTS.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: python-ci.yml
docs/: DESIGN.md  DEV_NOTES.md  MVP_SCOPE.md  ROADMAP.md  SCHEMA.md  USER_GUIDE.md
src/: main.py
src/cli/: args.py
src/timberborn_planner/data/: folktails.json  global.json  patch_meta.json
src/timberborn_planner/services/: loaders.py
tests/: test_loaders.py
