[tool.poetry]
name = "starter-project"
version = "0.1.0"
description = "A starter Python project with Poetry and GitHub Actions."
authors = ["Millie <your@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"